[package]
name = "zmq-async"
version = "0.1.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"

[dependencies]
log = "0.4"
zmq = "0.9.2"
mio = "0.6"
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3"

[dev-dependencies]
structopt = "0.3"